--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+    <p>Becoming a software developer excites me because I enjoy solving complex problems and building innovative solutions. The ability to create software that can impact people's lives is both challenging and rewarding. The ever-evolving field of technology offers endless opportunities to learn and grow, and being part of that dynamic environment is something I truly look forward to.</p>
+ 
     <script type="text/javascript" src="./script.js">
 </script>
 
